Version Increment for Deploy - Calm Business 1.5: editor font size mismatch fixes. - Elegant Business 1.3: editor font size mismatch fixes. - Friendly Business 1.3: editor font size mismatch fixes. - Modern Business 1.3: editor font size mismatch fixes. - Professional Business 1.4: editor font size mismatch fixes. - Sophisticated Business 1.4: contrast fix for featured sticky post tag.

--- a/sophisticated-business/style-rtl.css
+++ b/sophisticated-business/style-rtl.css
@@ -7,7 +7,7 @@ Author URI: https://automattic.com/
 Template: twentynineteen
 Description: Your classy establishment needs an equally classy website to showcase your delicious food and special concoctions! With its bold typography and chic color scheme, Sophisticated Business exudes the same cool, intimate atmosphere as an upscale bar, lounge, or pub.
 Requires at least: WordPress 4.9.6
-Version: 1.3
+Version: 1.4
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: sophisticated-business
@@ -2279,8 +2279,8 @@ body.page .main-navigation {
 }
 
 .sticky-post {
-  background: #080808;
-  color: #fff;
+  background: #caab57;
+  color: #080808;
   display: inline-block;
   font-weight: bold;
   line-height: 1;
